force-app/main/default/objects/Cuadro_Superficies__c/Cuadro_Superficies__c.object-meta.xml
<CustomObject>
    <label>Cuadro Superficies</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Cuadro Superficies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuadros Superficies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>