force-app/main/default/objects/Cuadro_Superficies__c/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bloqueo Inicial</label>
    <type>Checkbox</type>
</CustomField>