force-app/main/default/objects/Cuadro_Superficies__c/fields/Cuadro_Superficies_Name__c.field-meta.xml
<CustomField>
    <fullName>Cuadro_Superficies_Name__c</fullName>
    <label>Cuadro Superficies Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>