force-app/main/default/objects/Cuadro_Superficies__c/fields/Document_Version_History__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Version History</label>
    <referenceTo>DocumentVersionHistory__c</referenceTo>
    <relationshipLabel>Cuadros Superficies</relationshipLabel>
    <relationshipName>Cuadros_Superficies</relationshipName>
    <type>Lookup</type>
</CustomField>