force-app/main/default/objects/Cuadro_Superficies__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Cuadros Superficies</relationshipLabel>
    <relationshipName>Cuadros_Superficies</relationshipName>
    <type>Lookup</type>
</CustomField>