force-app/main/default/objects/Cuadro_Superficies__c/fields/Sup_Const_total_con_ZZCC_viviendas_Manu__c.field-meta.xml
<CustomField>
    <fullName>Sup_Const_total_con_ZZCC_viviendas_Manu__c</fullName>
    <label>Sup Const total con ZZCC viviendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>