force-app/main/default/objects/Cuadro_Superficies__c/fields/Sup_Const_ZZCC_sin_Zonas_Manu__c.field-meta.xml
<CustomField>
    <fullName>Sup_Const_ZZCC_sin_Zonas_Manu__c</fullName>
    <label>Sup Const ZZCC sin Zonas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>