force-app/main/default/objects/Cuadro_Superficies__c/fields/Sup_til_Garaje_con_calles_Manu__c.field-meta.xml
<CustomField>
    <fullName>Sup_til_Garaje_con_calles_Manu__c</fullName>
    <label>Sup Útil Garaje con calles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>