force-app/main/default/objects/Cuadro_Superficies__c/fields/Superficie_Construida_m2_Manu__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Construida_m2_Manu__c</fullName>
    <label>Superficie Construida Cerrada Viv m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>