force-app/main/default/objects/Cuadro_Superficies__c/fields/Superficie_Jardines_Manu__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Jardines_Manu__c</fullName>
    <label>Superficie Jardines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>