force-app/main/default/objects/Cuadro_Superficies__c/fields/Superficie_Terrazas_Cubiertas_Form__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Terrazas_Cubiertas_Form__c</fullName>
    <formula>IF ( ABS(Promocion__r.Superficie_Terrazas_Cubiertas_calculada__c - Sup_Terrazas_Cubiertas_Manu__c) = 0,
IMAGE( $Setup.Gestion_de_imagenes__c.ImagenOK__c ,&quot;OK&quot;, 17, 17) ,

IF(ABS(Promocion__r.Superficie_Terrazas_Cubiertas_calculada__c - Sup_Terrazas_Cubiertas_Manu__c) &lt; 1,
IMAGE( $Setup.Gestion_de_imagenes__c.Warning__c , &quot;Warning&quot;, 17, 17) + &quot; El número calculado es &quot; + text(Promocion__r.Superficie_Terrazas_Cubiertas_calculada__c),

IMAGE( $Setup.Gestion_de_imagenes__c.Imagen_ERROR__c, &quot;Incorrecto&quot;, 17, 17) + &quot; El número calculado es &quot; + text (Promocion__r.Superficie_Terrazas_Cubiertas_calculada__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Terrazas Cubiertas Form</label>
    <type>Text</type>
</CustomField>