force-app/main/default/objects/Cuadro_Superficies__c/fields/Superficie_util_m2_garajes_Manu__c.field-meta.xml
<CustomField>
    <fullName>Superficie_util_m2_garajes_Manu__c</fullName>
    <label>Superficie Útil m2 garajes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>