force-app/main/default/objects/Cuadro_Superficies__c/validationRules/Bloqueo_Cuadro_Superficie.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Cuadro_Superficie</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISCHANGED(Bloqueado__c)),
    Bloqueado__c
)</errorConditionFormula>
    <errorMessage>Aún no se puede rellenar el cuadro de superficies.</errorMessage>
</ValidationRule>